Reworked the interface
