# backend/pkg/server/handlers/clusters.go
@@ -20,57 +20,19 @@ import (
 	"github.com/gin-gonic/gin"
 	k8serrors "k8s.io/apimachinery/pkg/api/errors"
 
-	"github.com/ArubaKube/liqo-dashboard/pkg/server/api"
-	"github.com/ArubaKube/liqo-dashboard/pkg/server/models"
 	"github.com/ArubaKube/liqo-dashboard/pkg/utils/getters"
 )
 
-const defaultClusterSelection = "Remote"
-
 // GetV1Clusters implements the `GET /v1/clusters` route, returning all the peered clusters.
-func (s Server) GetV1Clusters(c *gin.Context, params api.GetV1ClustersParams) {
-	clusterType := defaultClusterSelection // default value
-	clusters := []models.ForeignCluster{}
-	var err error
-
-	if params.ClusterType != nil {
-		clusterType = string(*params.ClusterType)
+func (s Server) GetV1Clusters(c *gin.Context) {
+	foreignClusters, err := getters.GetForeignClusters(c, s.oClient)
+	if err != nil {
+		log.Printf("Error listing ForeignClusters: %v", err)
+		c.JSON(500, gin.H{"error": "Unable to retrieve the list of clusters"})
+		return
 	}
 
-	switch clusterType {
-	case "Remote":
-		clusters, err = getters.GetForeignClusters(c, s.oClient)
-		if err != nil {
-			log.Printf("Error listing ForeignClusters: %v", err)
-			c.JSON(500, gin.H{"error": "Unable to retrieve the list of clusters"})
-			return
-		}
-	case "Local":
-		clusters, err = getters.GetLocalCluster(c, s.nativeClient, s.oClient)
-		if err != nil {
-			log.Printf("Error listing LocalClusters: %v", err)
-			c.JSON(500, gin.H{"error": "Unable to retrieve the list of clusters"})
-			return
-		}
-	case "All":
-		foreignClusters, err := getters.GetForeignClusters(c, s.oClient)
-		if err != nil {
-			log.Printf("Error listing AllClusters: %v", err)
-			c.JSON(500, gin.H{"error": "Unable to retrieve the list of clusters"})
-			return
-		}
-
-		localClusters, err := getters.GetLocalCluster(c, s.nativeClient, s.oClient)
-		if err != nil {
-			log.Printf("Error listing AllClusters: %v", err)
-			c.JSON(500, gin.H{"error": "Unable to retrieve the list of clusters"})
-			return
-		}
-		clusters = append(clusters, localClusters...)
-		clusters = append(clusters, foreignClusters...)
-	}
-
-	c.JSON(200, clusters)
+	c.JSON(200, foreignClusters)
 }
 
 // GetV1ClustersId implements the `GET /v1/clusters/:id` route, returning the cluster with the given clusterID.
